Closed Bug 43691 Opened 25 years ago Closed 23 years ago

Click (POP) truncated msg link opens standalone window, crashes.

Categories

(MailNews Core :: Backend, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: laurel, Assigned: mscott)

References

Details

(Keywords: crash, Whiteboard: [nsbeta2+] ETA 7/13)

Attachments

(4 files)

Using jun23 m17 commercial build From the 3-pane window: When clicking on the link within a truncated (you've set a download size limit for that account) POP message which would download the rest of the message, we try to open a standalone message window and crash. 1. Launch a POP account profile, go to 3-pane mail window, message pane shown. 2. Edit|Account Settings, go to the account's server panel and enable "Limit message download to kB per messsage" and set the size to 1 (kB). Confirm OK. 3. Send that user a message which is over the size limit. 4. Get that message in the POP account and select it. 5. In the message pane, click on the link "Click here to download the rest of the message". Result: attempts to open in a standalone message, then crashes. Sometimes upon restart the message appears in its entirety, sometimes it is still in truncated form. Expected: should open in the message pane of the 3-pane mail window, replacing the previous truncated contents.
QA Contact: lchiang → laurel
Keywords: crash
Attached file talkback 12979126
Attached file talkback 12977860
Status: NEW → ASSIGNED
Target Milestone: --- → M17
I have seen the last crash stack fairly often. We were crashing with dereferrencing the null m_channel in nsMsgProtocol::GetStatus().
nominating for nsbeta2. 37311 which is similar to this but less destructive was already given an nsbeta2+
Keywords: nsbeta2
Putting on [nsbeta2+] radar for beta2 fix.
Whiteboard: [nsbeta2+]
*** Bug 37311 has been marked as a duplicate of this bug. ***
Taking from Jeff. I haven't investigated this, so I don't know how hard it is.
Assignee: jefft → bienvenu
Status: ASSIGNED → NEW
Whiteboard: [nsbeta2+] → [nsbeta2+] ETA 7/22
we have to fix this for nsbeta2, it results in data loss, at least for me - I can't ever get the message after this.
Status: NEW → ASSIGNED
Scott has been telling me how to fix this - it's pretty close to being fixed.
Whiteboard: [nsbeta2+] ETA 7/22 → [nsbeta2+] ETA 7/13
I'm feeling a bit on inspiration for this bug. I'll see if I can come up with a fix.
heh bienvenu is going to hate me when he sees how simple the fix turned out to be. If it's any consolation I was inspired in the shower this morning on how to fix this. Attaching the patch. I'll check it in tonight.
Assignee: bienvenu → mscott
Status: ASSIGNED → NEW
Attached patch proposed fix.Splinter Review
Most of the changes in that diff are actually white space changes. Someone is using hard tabs! The fix is easy. In the case of a uidl url (or any mail url which won't result in new content), nsMsgProtocol should supress the OnStartRequest and the OnStopRequest calls. This keeps the uriloader from getting involved which in turn keeps the docshell from trying to create a content viewer for this url. At the same time load progress and status notifications are maintained so you still get progress.
Status: NEW → ASSIGNED
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
OK using july17 commercial build on linux rh6.0, NT 4.0 and mac OS 9.0 No crash, doesn't attempt opening a standalone window.
Status: RESOLVED → VERIFIED
Note: situation for bug 37311 which is marked duplicate of this is OK only if you initiate full message download from the Inbox. If you initiate the full download from a folder other than the inbox the full download version goes to the Inbox. (Move or Filter/move situations.) New bug logged for that problem as bug 45727.
This bug needs to be reopend. I have been experiencing this from .90 thru .93, inclusive. Here's the way it looks to me: I have my pop account set to not download message greater than 250K. I can succesfully use the "truncated" link in the message body some 5 to 10 times with no problem (on distinct messages, of course). Then, suddenly, boom -- Mozilla crashes when I click the truncted link. Previously, I would need to delete the msf files to retrieve the rest of the message (not doing so keeps Moz crashing). With .93 (seemingly), what happens is that on restart there are now "two" messages. The first still has the "truncated" link (and continues to crash when clicked), but the other has the message with the body (attachment)in place. I've sent in a couple of talkbacks on this, and have attached one to this bug. I am currently on build 20011080110 (0.93), my inbox is huge at 538MB, I have several other folders, and the 3 pane view.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Attached file Talkback
i'm going to mark this as fixed again. The talkback report this bug fixed was a crash in nsMsgProtocol::GetStatus. According to talkback, there have been no reports filed with that stack trace.
Status: REOPENED → RESOLVED
Closed: 25 years ago23 years ago
Resolution: --- → FIXED
QA Contact: laurel → sheelar
Verified 2002-01-03-06 win98, linux rh 6.2, mac x os
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: