Bug #43691 --> fix pop uidl urls by supressing OnStart and OnStopRequest calls if the url we are running isn't going to result in any new content. r=alecf